# notes-addin-casio-fx-cg50

./: .gitignore  .graphify_ast.json  .graphify_detect.json  .graphify_incremental.json  .graphifyignore  .openclaude-profile.json  AGENTS.md  ANALYSIS_LIMITATIONS.md  C++_ENGINE_ISSUES.md  Compile.txt  DERIVE_PORT_PROMPT.md  FAILURE_ANALYSIS.md  HANDOFF_CAS_FINAL.md  OUTPUT_ENHANCEMENTS.md  PORT_TODO.md  PROMPT.md  README.md  SIZE_ANALYSIS.md  TUTORIAL.md  Tests.rtf  Tests.txt  _config.yml  boolean.py  cg50_g3a_port_plan_b643f345.plan.md  compile  derive.py  extreme_test.py  graphify-out  input.txt  int.py  madasmaths_topic_audit_manifest.csv  past_paper_audit.csv  past_paper_audit.md  run.py  run_tests.py  tiny.mpy  trig.py
.obsidian/: graph.json  workspace.json
ComputerScience/: booleanProgram.py
Math/: SUVATprogram.py  algebraProgram.py  algebra_README.md  deriveProgram.py  derive_README.md  intProgram.py  int_README.md  test_algebra_feature_audit.py  test_algebra_generated_audit.py  test_calculator_cli_edges.py  test_calculator_regressions.py  test_suvat_extreme.py  test_suvat_feature_audit.py  test_trig_generated_audit.py  trigProgram.py  trig_README.md
_includes/: head-custom.html
addin/: CMakeLists.txt  README.md
addin/host/: CMakeLists.txt  main.cpp
c++/: FEATURE_PARITY.md  GRAPH.md
c++/addin/: .gitignore  CMakeLists.txt  DEVICE_PORT_PLAN.md  DEVICE_SMOKE_CHECKLIST.md  FXSDK_INSTALL.md  README.md
c++/addin/host/: CMakeCache.txt  CMakeLists.txt  Makefile  casio_host  cmake_install.cmake  device_solver_smoke  device_solver_smoke.cpp  main.cpp
c++/addin/src/: main.cpp
c++/addin/src/core/: arena.hpp  exam_work.cpp  exam_work.hpp  format_exam.cpp  format_expr.cpp  node.hpp  normalize.cpp  parse.cpp  parse.hpp  parse_equation.cpp  rational.cpp  rational.hpp  same.cpp  scope_guard.hpp  sig.cpp  simplify.cpp  simplify.hpp  tokenize.hpp
c++/addin/src/device/: cas_wrapper.cpp  cas_wrapper.hpp  cascas_host_offsets.h  casio_compat.hpp  device_solver.cpp  device_solver.hpp  feature_registry.hpp  line_buffer.hpp
c++/addin/src/device/cas_lib/: Arithmetic.cpp  Arithmetic.h  Equation.cpp  Equation.h  Expression.cpp  Expression.h  Term.cpp  Term.h  Utils.cpp  Utils.h
c++/addin/src/device/prizm_shims/: cctype  cstdio  cstring  deque  iomanip  memory  numeric  optional  set  string_view  tuple  unordered_map  utility
c++/addin/src/modules/algebra/: algebra.cpp  algebra.hpp
c++/addin/src/modules/boolean/: boolean.cpp
c++/addin/src/modules/derive/: derive.cpp  derive.hpp
c++/addin/src/modules/integrate/: integrate.cpp
c++/addin/src/modules/stats/: stats.cpp  stats.hpp
c++/addin/src/modules/suvat/: suvat.cpp
c++/addin/src/modules/trig/: trig.cpp  trig.hpp
c++/addin/src/ui/: menu.cpp  menu.hpp  text_input.cpp  text_input_device.cpp  theme.hpp
c++/legacy/addin/: CMakeLists.txt  README.md
c++/legacy/addin/host/: CMakeLists.txt  device_solver_smoke.cpp
c++/legacy/addin/src/: main.cpp
c++/legacy/addin/src/core/: cache.hpp  format_exam.hpp  format_expr.cpp  normalize.hpp  rational.hpp  simplify.cpp
c++/legacy/addin/src/device/: casio_compat.hpp  device_solver.cpp  fixed_string.hpp
c++/legacy/addin/src/modules/algebra/: algebra.cpp  algebra.hpp
c++/legacy/addin/src/modules/integrate/: integrate.cpp
c++/legacy/addin/src/ui/: menu.hpp  text_input.cpp  text_input.hpp  text_input_device.cpp  text_input_device.hpp
calculator_files/: CAS.PAK  CAS.g3a  CASP3.g3a  CSCALC.g3a  NOTES.g3a  RUNMAT.g3a  SUVAT.py
docs/: CASIO_FX_CG50_MPY.md  CASP3_README.md  CAS_README.md  CSCALC_README.md  Compile.txt  GRAPH.md  LLM_ENHANCEMENT_SPEC.md  NOTES_README.md  a_level_pure_coverage_matrix.md  a_level_scope.md  algebra_README.md  aqa_cs_calc_scope.md  boolean_README.md  cas_planner_references.md  derive_README.md  int_README.md  khicasen_runtime_diff_audit.md  math_program_improvements.md  reapply_audit.md  runtime_risk_audit.md  suvat_README.md  trig_README.md  upstream.md  working_detail_standard.md
graphify-out/: .graphify_detect.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
progress/: state.jsonl  vm_second_pass_audit.md
python/: .gitignore  AGENTS.md  CLAUDE.md  PROGRAM_LIMITATIONS.txt
scripts/: dedupe_intprogram_blocks.py
source/: AGENTS.md
src/: shared_cache.py  shared_formatting.py  shared_helpers.py  shared_llm.py  shared_quality.py
tests/: audit_no_golden_queue_coverage.py  audit_vm_coverage.py  check_calculator_callback_xform.py  check_cas_p3_mechanics.py  check_catalog_runtime_contract.py  check_classification_audit.py  check_command_template_contract.py  check_cscalc_engine.py  check_exact_calculator_input_queue.py  check_golden_shared_coverage.py  check_hard_source_cases.py  check_hard_working_wrappers.py  check_help_examples.py  check_host_root_exact.py  check_khicas_fallback_explainer.py  check_multi_app_suite.py  check_notes_docx_coverage.py  check_notes_integrity.py  check_notes_render_layout.py  check_p3_engine.py  check_plain_eval_fallthrough.py  check_random_generator_catalog_coverage.py  check_random_generator_entropy.py  check_range_general_engine.py  check_rewrite_complexity_guard.py  check_shared_core_without_golden.py  check_shared_working.py  check_solve_domain_filter.py  check_stress_queue_regression_quality.py  check_suvat_stress.py  check_targeted_working_gaps.py  check_working_planner.py  check_working_quality.py  check_xform_general_planner.py  check_xform_rule_families.py  extreme_test.py  manual_test.py  quick_test.py  random_working_fuzzer.py  run_exact_queue.py  (+24 more)
tools/: _append_all_booklet_batches.py  _build_booklet_batches.py  _build_booklet_scan_batches.py  _build_c4_l_u_second_pass.py  _build_madas_c3_c4_batches.py  _build_mp1_rst_batches.py  _build_mp1_uvw_batches.py  _build_mp2_ghi_batches.py  _build_mp2_jklm_batches.py  _build_mp2_syn_scan.py  _build_remaining_vm_papers.py  _build_second_pass_c1_vwxyz.py  _build_second_pass_c4_vyz.py  _build_standard_topics.py  _gen_edexcel_batches.py  _second_pass_trigonometry.py  build_addin.sh  (+54 more)
tools/working_engine/host/: CMakeLists.txt  main.cpp
(+1272 files in other folders)
